# vulkano-rust

./: .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
data/models/: SoldierRe.glb  (+8 more)
engine/: Cargo.toml  mod.rs
engine/data/models/: platform.glb  suzanne.blend  suzanne_base_color.glb
engine/src/: lib.rs
engine/src/assets/: animation.rs  asset_loader.rs  asset_manager.rs  material.rs  mod.rs
engine/src/assets/gltf_loader/: loader.rs  mod.rs
engine/src/core/: application.rs
engine/src/graphics/: mesh.rs  mod.rs  model.rs  skybox.rs
engine/src/graphics/renderer/: compute.rs  ibl.rs  images.rs  mod.rs  passes.rs  pipelines.rs  renderer.rs  shadowingthingy.md  upload.rs
engine/src/graphics/renderer/shaders/: ambient.frag  ao.comp  blur.comp  brdf_lut.comp  composite.frag  deferred.frag  deferred.vert  directional.frag  frustum_culling.comp  fxaa.comp  irradiance.comp  pointlight.frag  prefilter.comp  shadows.frag  shadows.vert  skybox.frag  skybox.vert
engine/src/input/: input_manager.rs
engine/src/physics/: mod.rs  physics_engine.rs
engine/src/scene/: scene.rs
engine/src/scene/components/: animator.rs  camera.rs  delta_time.rs  directional_light.rs  mod.rs  object3d.rs  pointlight.rs  transform.rs  velocity.rs
engine/tests/: application_tests.rs  asset_manager_tests.rs  component_tests.rs
game/: Cargo.toml
game/data/models/: piper.mtl  platform.blend1  suzanne.glb
game/src/: main.rs  my_game.rs
game/src/player/: camera.rs  interact.rs  mod.rs  movement.rs
game/src/soldier/: mod.rs  movement.rs
src/: main.rs  model.rs
(+46 files in other folders)
