[package]
name = "vulkano-tut"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.23.1"
vulkano = "0.35.2"
vulkano-shaders = "0.35.0"
vulkano-win = "0.32.0"
nalgebra-glm = "0.17.0"
rapier3d = { version = "0.27.0", features = ["simd-stable"] }
easy-gltf = "1.1.5"
itertools = "0.14.0"
sdl3 = { version = "=0.14.16", features = ["build-from-source"] }
ash = "0.38.0"
shipyard = "0.9.0"
image = "0.25.6"
