[package]
name = "vulkano-game"
version = "0.1.0"
edition = "2024"

[dependencies]
# Your engine as a dependency
vulkano-engine = { path = "../engine" }

# Game-specific dependencies
nalgebra-glm = { workspace = true }
rapier3d = { workspace = true }
sdl3 = { workspace = true }
shipyard = { workspace = true }
